# diffforge-client

./: .gitattributes  .gitignore  LICENSE.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.cargo/: config.toml
.github/workflows/: release-desktop.yml
hardware/blinky/: blinky.board.tsx
public/: .gitignore
scripts/: build-web.mjs  package-current-platform.mjs  package-macos-pkg.sh  pcb-drc.mjs  prune-target-cache.sh  register-macos-dev-deeplink.sh  register-windows-dev-deeplink.ps1
src/: App.jsx  authStore.js  main.js  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.dev.conf.json  whisper-transcript-policy.json
src-tauri/capabilities/: audio-widget-resize.json  default.json
src-tauri/docs/: video-agent-guide.md
src-tauri/icons/: icon.icns
src-tauri/installer/linux/: diffforge  postinstall.sh  postremove.sh
src-tauri/installer/windows/: diffforge-cli-path.nsh
src-tauri/src/: activity_overlay.rs  agent_accounts.rs  agent_chat_sync.rs  agent_sessions.rs  api.rs  app_control_mcp.rs  app_updater.rs  architectures.rs  assets.rs  audio.rs  audio_history.rs  backend_cpu.rs  background_mode.rs  byoc.rs  cloud_mcp.rs  codex_config.rs  developer_processes.rs  editor.rs  editor_control.rs  editor_export.rs  energy_impact.rs  handsfree_audio.rs  lib.rs  local_scripts.rs  main.rs  native_notifications.rs  orchestrator_pool.rs  pcb.rs  platform.rs  process.rs  snipping.rs  ssh_profiles.rs  swarm_runtime.rs  terminal_cli.rs  terminals.rs  todo_dispatch.rs  tokenomics.rs  tools_window.rs  validation.rs  video_annotate.rs  (+10 more)
src-tauri/src/coordination/: alignment.rs  cloud_context.rs  cloud_mock.rs  cloud_orchestrator.rs  cloud_redaction.rs  db.rs  dependency_graph.rs  events.rs  kernel.rs  mcp.rs  memory.rs  merge_gate.rs  mod.rs  models.rs  patches.rs  resources.rs  schema.rs  sql_classifier.rs  sql_policy.rs  tauri_commands.rs  violations.rs  watcher.rs  worktrees.rs
src-tauri/src/email/: capability.rs  cli.rs  cloud_transport.rs  contract.rs  credentials.rs  dkim.rs  encrypted_vault.rs  journal.rs  mime.rs  mod.rs  mx.rs  native_delivery.rs  preflight.rs  profiles.rs  rate_limit.rs  remote.rs  retry.rs  smtp_session.rs  submission.rs  test_support.rs  tests.rs  ui.rs
src-tauri/tests/contracts/email-v1/: README.md  coverage__tuple__basic.json  events__address_upsert__basic.json  events__binding_upsert__basic.json  events__counter_snapshot__basic.json  events__domain_mirror_upsert__basic.json  events__draft_upsert__basic.json  events__identity_upsert__basic.json  events__ingress_receipt__basic.json  events__label_assignment__basic.json  events__label_upsert__basic.json  events__message_classified__basic.json  events__message_ingested__basic.json  events__message_ingested__truncated_text.json  events__message_state__basic.json  events__purge_finalized__basic.json  events__purge_intent__basic.json  events__purge_state__basic.json  events__purge_state__full_ladder.json  events__push_generation__basic.json  events__rule_upsert__basic.json  events__send_job_upsert__basic.json  events__send_recipient_state__basic.json  events__settings_upsert__basic.json  events__thread_upsert__basic.json  events__tombstone__basic.json  events__tombstone__send_generation.json  events__unknown_kind__fails_closed.json  generation_retired__ack__basic.json  ingest__claim__bad_body_hash.json  ingest__claim__expired.json  ingest__claim__replayed_jti.json  ingest__claim__valid.json  ingest__claim__wrong_aud.json  ingest__pointer__basic.json  ingest__response__deletion_fenced.json  ingest__response__duplicate.json  ingest__response__hash_conflict.json  ingest__response__ingested_covered.json  ingest__response__ingested_uncovered.json  (+111 more)
src/activity/: ActivityOverlay.jsx
src/agents/: AgentWorkspaceView.jsx  agentLaunchDefaults.js  agentLaunchDefaults.test.js  agentRemoteConfig.js  agentUpdateUi.js  agentUpdateUi.test.js  imageInputCapabilities.js
src/app/: AppSelect.jsx  AppShell.jsx  AppShellRemoteLoopspaceNavigation.test.js  AppShellRemoteTodoDispatch.test.js  AppUpdateBanner.jsx  PaneErrorBoundary.js  PaneErrorBoundary.test.js  PlanFlame.jsx  PlusUpsell.jsx  WorkspaceIdleState.jsx  appStyles.js  invokeProbe.js  loopspaceTodoDispatchTargets.js  renderLoopProbe.js  renderability.js  sharedTauriEvents.js  usePopoutWindowFullscreen.js  workspaceProjectInventory.js  workspaceProjectInventory.test.js
src/architecture/: ArchitectureWorkspaceView.jsx  sessionHistoryResumability.js  sessionHistoryResumability.test.js
src/assets/: AccountAssetsView.jsx  HyperframeEditor.jsx  MediaTranscriptChip.jsx  accountAssetV2.js  useAccountAssetsLibrary.js  useUntrackedAssetsLibrary.js  videoTranscription.js
src/audio/: AudioWorkspaceView.jsx  audioCapture.js  audioHistoryStore.js  cloudVoiceAgentClient.js  voicePipeline.js  voicePipeline.test.js  voiceRulesStore.js
src/aura/: AuraMode.jsx  AuraModeIcon.jsx  AuraSceneEngine.js  auraMockData.js
src/background/: BackgroundMonitorWindow.jsx
src/coordination/: CoordinationWorkspaceView.jsx
src/devices/: AccountDevicesView.jsx  DevicesView.jsx
src/diagnostics/: commitProfiler.js  diagnosticIpcBudget.js  serializationProbe.js  uiFreezeProbe.js  windowFocusDiagnostics.js  workspaceActivationDiagnostics.js
src/editor/: EditorWorkspaceView.jsx  generationCatalog.js
src/email/: EmailDeliverySettingsPanel.jsx  EmailSenderProfileForm.jsx  NativeDeliveryPanel.jsx  emailDeliveryContract.js  emailDeliveryContract.test.js  emailStyles.js  useEmailDeliveryProfiles.js
src/files/: FilesWorkspaceView.jsx
src/git/: GitWorkspaceView.jsx
src/kanban/: KanbanWorkspaceView.jsx
src/loopspaces/: dfblueprint.js  graphContract.js  graphContract.test.js
src/mcps/: McpsWorkspaceView.jsx
src/notifications/: nativeNotifications.js  notificationPreferences.js  notificationPreferences.test.js  notificationSfx.js  notificationSfx.test.js  workspaceNotifications.js  workspaceNotifications.test.js
src/pcb/: PcbPanel.jsx  PcbView.jsx  PcbWindowHost.jsx  PcbWorkspacePane.jsx  pcbElementContext.js  pcbElementContext.test.js  (+3 more)
(+159 files in other folders)
