[package]
name = "rust-diffforge"
version = "0.1.0"
description = "Diff Forge AI desktop app"
authors = ["Diff Forge AI"]
edition = "2021"
default-run = "rust-diffforge"

[lib]
name = "rust_diffforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
cpal = "0.15"
enigo = "0.6"
futures-util = "0.3"
notify = "6"
portable-pty = "0.9.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
sysinfo = "0.39.1"
tauri = { version = "2", features = ["macos-private-api", "unstable"] }
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["macros", "net", "sync", "time"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
tungstenite = { version = "0.26", default-features = false, features = ["rustls-tls-native-roots"] }
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Wdk_System_SystemServices", "Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_SystemInformation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }

[patch.crates-io]
portable-pty = { path = "vendor/portable-pty" }
