[package]
name = "rust-diffforge"
version = "0.9.34"
description = "Diff Forge AI desktop app"
authors = ["Diff Forge AI"]
edition = "2021"
default-run = "rust-diffforge"

[lib]
name = "rust_diffforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
# email: password hashing for the headless encrypted credential vault
# (Argon2id KDF; MIT OR Apache-2.0).
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
chacha20poly1305 = "0.10"
cpal = "0.15"
crypto_box = { version = "0.9.1", features = ["seal", "std"] }
enigo = "0.6"
futures-util = "0.3"
getrandom = "0.2"
hkdf = "0.12"
hmac = "0.12"
# email: OS credential stores (macOS Keychain / Windows Credential Manager /
# libsecret). Backend features are selected per-OS below (MIT OR Apache-2.0).
keyring = { version = "3", default-features = false }
# email: SMTP submission client, rustls-only TLS with mandatory cert +
# hostname verification (MIT).
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "rustls-tls"] }
# email: DKIM signing/verification for native delivery (Apache-2.0 OR MIT).
mail-auth = { version = "0.7", default-features = false, features = ["rust-crypto"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
libc = "0.2"
# lzma-rs + tar: pure-Rust extraction of ffmpeg static-build .tar.xz archives
# (Linux managed install); zip below stays the Windows/macOS path.
lzma-rs = "0.3"
notify = "6"
portable-pty = "0.9.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls-native-roots", "stream"] }
httpdate = "1"
mail-parser = "0.11"
rusqlite = { version = "0.32", features = ["bundled"] }
# email: RSA-2048 key generation for DKIM (mail-auth signs, rsa generates;
# MIT OR Apache-2.0).
rsa = { version = "0.9", features = ["pem", "sha2"] }
# email: TLS server side of the local capturing SMTP sink used by the
# submission test matrix. Feature set mirrors lettre's own rustls dependency
# so the provider stays ring-only (Apache-2.0 OR ISC OR MIT).
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12", "ring"] }
scap = "0.1.0-beta.1"
# email: wrapper types that keep credential material out of Debug/logs
# (MIT OR Apache-2.0).
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
sysinfo = "0.39.1"
tar = "0.4"
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "tray-icon", "unstable"] }
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
toml = "0.9"
tungstenite = { version = "0.26", default-features = false, features = ["rustls-tls-native-roots"] }
uuid = { version = "1", features = ["v4", "v7"] }
vt100 = "0.16.2"
webm = "2.2.0"
window-vibrancy = "0.6"
x25519-dalek = { version = "2", features = ["static_secrets"] }
# email: zero secret buffers on drop (MIT OR Apache-2.0).
zeroize = { version = "1", features = ["zeroize_derive"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(not(windows))'.dependencies]
shiguredo_libvpx = "2026.2.0-canary.0"

[target.'cfg(target_os = "macos")'.dependencies.keyring]
version = "3"
default-features = false
features = ["apple-native"]

[target.'cfg(windows)'.dependencies.keyring]
version = "3"
default-features = false
features = ["windows-native"]

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies.keyring]
version = "3"
default-features = false
features = ["sync-secret-service"]

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { version = "0.10.1", default-features = false, features = ["async", "blocks", "cf", "cg", "cm", "cv", "dispatch", "ns", "objc", "sc"] }
coreaudio-rs = "0.12"
# "exception": AppKit NSExceptions raised inside our main-thread window calls
# must be caught at the ObjC boundary — one unwinding into the runloop
# observer's catch_unwind is a foreign exception and aborts the process.
objc2 = { version = "0.6", features = ["exception"] }
objc2-app-kit = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-foundation = "0.3.1"
objc2-user-notifications = "0.3.2"
block2 = "0.6"

[target.'cfg(windows)'.dependencies]
# Stable file-identity checks (GetFileInformationByHandle) — std's
# volume_serial_number()/file_index() are nightly-only (windows_by_handle).
same-file = "1.0"
windows-capture = "1.5.0"
windows-sys = { version = "0.61", features = ["Wdk_System_SystemServices", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_LibraryLoader", "Win32_System_Registry", "Win32_System_SystemInformation", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
quick-xml = "0.39.3"

[patch.crates-io]
cidre = { path = "vendor/cidre" }
portable-pty = { path = "vendor/portable-pty" }
# Vendored at upstream rev c03f15a ("fix windows build") plus a one-line fix:
# upstream's Windows engine calls Frame::timespan, which does not exist in any
# published windows-capture 1.5.x — no obtainable crate combo compiles there.
# We only need scap to build on Windows (snipping.rs has its own
# windows-capture handler); see vendor/scap/src/capturer/engine/win/mod.rs.
scap = { path = "vendor/scap" }

# Production build is tuned for runtime energy: thin LTO inlines across crate
# boundaries (hot paths here are serde_json IPC (de)serialization and rusqlite
# queries), and stripping shrinks the binary. panic stays "unwind" on purpose:
# objc2's "exception" feature and our main-thread catch_unwind boundary require
# unwinding — "abort" would turn caught NSExceptions into hard process aborts
# (see the objc2 dependency note above).
[profile.release]
opt-level = 3
lto = "thin"
strip = true
panic = "unwind"

# Debug builds are the daily driver, and the hot paths live in dependencies:
# measured on this machine, serde_json parses 19x slower and bundled SQLite
# 2-4x slower at -O0. Optimizing ONLY dependencies keeps the workspace crate
# at -O0 (fast incremental builds, debug assertions intact — the energy/
# diagnostic instrumentation defaults key off cfg!(debug_assertions)) while
# the serde/sqlite cycles run at production speed.
[profile.dev.package."*"]
opt-level = 2
